# Awale

./: Awale.pro  Awale.xcf  Board.qml  CMakeLists.txt  Halve.qml  Hole.qml  README.md  Receipe.qml  StartPage.qml  Stone.qml  awale.cpp  awale.h  clangStaticAnalysis.sh  clazyFixIt.sh  game.cpp  game.h  main.cpp  main.qml  qml.qrc
Client/: Client.pro  main.qml  qml.qrc
Client/Awale/: Awale.pro  main.qml  qml.qrc
Client/Awale/QML/: Awale.qml  AwaleSocket.qml
Client/Awale/QML/Elements/: GameList.qml  KLoading.qml  MenuBackground.qml  MenuButton.qml  MessageBox.qml  PictureChooser.qml
Client/Awale/QML/Game/: Board.qml  BoardMenu.qml  Hole.qml  LaunchGamePage.qml  MenuText.qml  Receipe.qml  StoneParticles.qml
Client/Awale/QML/Menu/: AccountCreationPage.qml  ConfirmPage.qml  LaunchGamePage.qml  LoginPage.qml  StartPage.qml
Client/Awale/WorkingFiles/: FaceBorder.xcf
Client/Awale/android/: AndroidManifest.xml
Client/QML/: AccountCreationPage.qml  Awale.qml  AwaleSocket.qml  Board.qml  BoardButton.qml  ConfirmPage.qml  Halve.qml  Hole.qml  KLoading.qml  LaunchGamePage.qml  LoginPage.qml  MenuBackground.qml  MenuButton.qml  MessageBox.qml  OpponentListPage.qml  Page.qml  PictureChooser.qml  Receipe.qml  Separator.qml  StartPage.qml  Stone.qml  StoneParticles.qml  TextField.qml  WinPage.qml  main.qml
Client/QML/Elements/: BoardButton.qml  MenuBackground.qml  MenuButton.qml  MenuText.qml  PictureChooser.qml  Separator.qml  TextField.qml
Client/QML/Game/: AccountPage.qml  Board.qml  BoardMenu.qml  Halve.qml  Hole.qml  LaunchGamePage.qml  Receipe.qml  Stone.qml  StoneParticles.qml  WinPage.qml
Client/QML/Menu/: AccountCreationPage.qml  LoginPage.qml  StartPage.qml
Client/WorkingFiles/: Buttons.xcf  ConfirmBox.xcf  Stone.xcf  Title.xcf
Core/: CMakeLists.txt  account.cpp  account.h  awale.cpp  awale.h  examplefeeder.cpp  examplefeeder.h  game.cpp  game.h  graphbuilder.cpp  graphbuilder.h  holeevaluator.cpp  holeevaluator.h  objectstorage.cpp  objectstorage.h  xmltools.cpp  xmltools.h
QML/: Board.qml  BoardButton.qml  ConfirmPage.qml  Halve.qml  Hole.qml  KLoading.qml  MenuButton.qml  Receipe.qml  StartPage.qml  Stone.qml  StoneParticles.qml  WinPage.qml  main.qml
Server/: CMakeLists.txt  account.cpp  account.h  accountcreator.cpp  accountcreator.h  awaleserver.cpp  awaleserver.h  gamemaker.cpp  gamemaker.h  main.cpp  messagelistener.cpp  messagelistener.h  sqlitestorage.cpp  sqlitestorage.h
WorkingFiles/: Buttons.xcf  Icon.xcf  KLoading.xcf  Stone.xcf  Title.xcf
